# webtelnet

./: .gitignore  README.md  pyproject.toml
tests/: test_webtelnet.py
webtelnet/: __init__.py  __main__.py  index.html
